--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
         </div>
         <div class="col-md-4">
           <div class="row text-center border-LE">
-            <div class="col-md-6 color font-bol">
+            <div class="col-md-6 col-sm-6 color font-bol">
               <p>Location</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
               <p>독학</p>
             </div>
-            <div class="col-md-6 color font-bol">
+            <div class="col-md-6 col-sm-6 color font-bol">
               <p>Age</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
               <p>30</p>
             </div>
-            <div class="col-md-6 color font-bol">
+            <div class="col-md-6 col-sm-6 color font-bol">
               <p>성시경</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
               <p>두사람</p>
             </div>
-            <div class="col-md-6 color font-bol">
+            <div class="col-md-6 col-sm-6 color font-bol">
               <p>거리에서</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
               <p>희재</p>
             </div>
           </div>
@@ -72,13 +72,13 @@
 
     <div class="container pdzero">
       <div class="row magin-t">
-        <div class="col-3">
+        <div class="col-md-3 magin-t">
           <div class="white-box">
             <h4>Work Space</h4>
             <p class="padding-b">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC</p>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-md-6 magin-t">
           <div class="white-box">
             <h4>ABOUT</h4>
             <p class="padding-b">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
@@ -91,7 +91,7 @@
             <div class="padding-b"></div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-md-3 magin-t">
           <div class="white-box" style="text-align: center;">
             <i class="fas fa-burn fa-5x color"></i>
             <p class="magin-t">Find me at Linkedout.com</p>
@@ -100,14 +100,32 @@
           </div>
           <p class="magin-t">Peple You might Know</p>
           <div class="bottom-line"></div>
+          <div class="row magin-t">
+            <div class="d-flex">
+              <div class="flex-shrink-0">
+                <img src="img/author3.png" width="70px;">
+              </div>
+              <div class="flex-grow-1 ms-3 font-bol">
+                <h4 class="color font-siz">Ji Hoon</h4>
+                <p>Front-End</p>
+                <p><i class="fas fa-map-marker-alt color font-siz"></i> 부천시</p>
+              </div>
+            </div>
+            <div class="d-flex">
+              <div class="flex-shrink-0">
+                <img src="img/author2.png" width="70px;">
+              </div>
+              <div class="flex-grow-1 ms-3 font-bol">
+                <h4 class="color font-siz">Ji Hoon</h4>
+                <p class="font-siz">Front-End</p>
+                <p><i class="fas fa-map-marker-alt color font-siz"></i> 부천시</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  
-  
-  
-  
-  
+
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
